# mnemo

./: .env.example  .gitignore  Makefile  README.md  SUBMISSION.md  pyproject.toml
assets/: demo.cast
docs/: ARCHITECTURE.md
scripts/: demo.sh  seed.sh
src/mnemo/: __init__.py  cli.py  config.py  console.py  service.py
src/mnemo/ingest/: __init__.py  repo_scanner.py
src/mnemo/memory/: __init__.py  base.py  cognee_backend.py
tests/: test_repo_scanner.py
